[metadata]
name = notion-oauth-handler
version = 0.0.7
author = Grigory Statsenko
author_email = grisha100@gmail.com
description = Handler and simple server for Notion's OAuth 2 for public integrations
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    notion
    authentication
    oauth
url = https://github.com/altvod/notion-oauth-handler
project_urls =
    Bug Tracker = https://github.com/altvod/notion-oauth-handler/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp
    attrs
    yarl

[options.packages.find]
where = src

[options.extras_require]
testing =
    mypy
    pytest
    pytest-envfiles
build =
    build
    twine

[options.entry_points]
# App and scripts
console_scripts =
    notion-oauth-handler = notion_oauth_handler.scripts.cli:run

# Consumers
notion_oauth_handler.consumer =
    dummy = notion_oauth_handler.core.consumer:DummyNotionOAuthConsumer

# Response factories
notion_oauth_handler.response_factory =
    dummy = notion_oauth_handler.server.response:DummyNotionOAuthResponseFactory
    echo = notion_oauth_handler.server.response:EchoNotionOAuthResponseFactory
